--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Enter Your Input: </h1>
-    <form action="http://localhost:5000/find_recipe" method="post">
+    <form action="http://127.0.0.1:5000/find_recipe" method="post">
         <input type="text" name="user_input">
         <button type="submit">Submit</button>
     </form>
