Adding login_exists function

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
     <title>Gyaldem Recipe Generator</title>
 </head>
 <body>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./find_recipe.html">Find Recipe</a>
+        <a href="./login.html">Login</a>
+    </nav>
+
     <h1>Enter Your Input: </h1>
     <form action="http://127.0.0.1:5000/find_recipe" method="post">
         <input type="text" name="user_input">
