--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,13 @@
 
     <h2>Login</h2>
     
-    {% if current_user.is_authenticated %}
+        <!-- {% if current_user.is_authenticated %}
         <p>Welcome, {{ current_user.name }}! You are already logged in.</p>
-        <a href="{{ url_for('dashboard') }}">Go to Dashboard</a>
+        <a href="./dashboard.html">Go to Dashboard</a>
         <br>
-        <a href="{{ url_for('logout') }}">Logout</a>
-    {% else %}
-        <form method="post" action="{{ url_for('login') }}">
+        <a href="./logout.html">Logout</a> -->
+    <!-- {% else %} -->
+        <form method="post" action="http://127.0.0.1:5000/login">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <br>
@@ -26,7 +26,7 @@
         </form>
         <br>
         <p>Don't have an account? <a href="#">Sign up</a></p>
-    {% endif %}
+    <!-- {% endif %} -->
 
 </body>
 </html>
