--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./find_recipe.html">Find Recipe</a>
-        <a href="./login.html">Login</a>
+        <a href="http://127.0.0.1:5000/index">Home</a>
+        <!-- <a href="http://127.0.0.1:5000/find_recipe">Find Recipe</a> -->
+        <a href="http://127.0.0.1:5000/login">Login</a>
+        <a href="http://127.0.0.1:5000/signup">Signup</a>
     </nav>
 
     <h1>Enter Your Input: </h1>
