--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,12 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+
     <nav>
         <a href="http://127.0.0.1:5000/index">Home</a>
         <!-- <a href="http://127.0.0.1:5000/find_recipe">Find Recipe</a> -->
         <a href="http://127.0.0.1:5000/login">Login</a>
         <a href="http://127.0.0.1:5000/signup">Signup</a>
     </nav>
+    <h2>Signup</h2>
+    {% if error %}
+    <div class="alert alert-danger" role="alert">
+        {{ error | safe }}
+    </div>
+    {% endif %}
 
     <form method="post" action="http://127.0.0.1:5000/signup">
         <label for="username">Username:</label>
@@ -28,5 +35,7 @@
         <br>
         <button type="submit">Signup</button>
     </form>
+
+    <p>Already have an account? <a href="http://127.0.0.1:5000/login">Login here</a></p>
 </body>
 </html>
