Login nav pages, redirecting not working once logged in

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyaldem Recipe Generator</title>
+    <title>Document</title>
 </head>
 <body>
     <nav>
@@ -13,14 +13,8 @@
         <a href="http://127.0.0.1:5000/login">Login</a>
         <a href="http://127.0.0.1:5000/signup">Signup</a>
     </nav>
-<!-- 
-    <h1>Enter Your Input: </h1>
-    <form action="http://127.0.0.1:5000/find_recipe" method="post">
-        <input type="text" name="user_input">
-        <button type="submit">Submit</button>
-    </form> -->
-    <h2>Overview</h2>
-    <p>This will be the overview page explaining the application - find some pages to take inspiration from</p>
 
+    <h2>FAQs</h2>
+    <p>This needs to be filled with FAQs</p>
 </body>
 </html>
