--- a/templates/account.html
+++ b/templates/account.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Account</title>
 </head>
 <body>
     <nav>
-        <a href="http://127.0.0.1:5000/dashboard">Home</a>
+        <a href="http://127.0.0.1:5000/index">Home</a>
         <a href="http://127.0.0.1:5000/find_recipe">Find a Recipe</a>
         <a href="http://127.0.0.1:5000/account">Account</a>
         <a href="http://127.0.0.1:5000/settings">Settings</a>
     </nav>
-
-    <h2>Dashboard</h2>
-    <p>Welcome message needs to show up here with the users name</p>
-    <p>Think of some other icons and links for this page</p>
-
+    <h2>Account</h2>
+    <p>This will be user account information like allergies and saved recipes?
+    </p>
 </body>
 </html>
