--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <nav>
-        <a href="http://127.0.0.1:5000/index">Home</a>
+        <a href="http://127.0.0.1:5000/index">Overview</a>
         <!-- <a href="http://127.0.0.1:5000/find_recipe">Find Recipe</a> -->
+        <a href="http://127.0.0.1:5000/faqs">FAQs</a>
         <a href="http://127.0.0.1:5000/login">Login</a>
         <a href="http://127.0.0.1:5000/signup">Signup</a>
     </nav>
