Fixed @login_required pages

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="http://127.0.0.1:5000/index">Overview</a>
+        <a href="http://127.0.0.1:5000/">Overview</a>
         <!-- <a href="http://127.0.0.1:5000/find_recipe">Find Recipe</a> -->
         <a href="http://127.0.0.1:5000/faqs">FAQs</a>
         <a href="http://127.0.0.1:5000/login">Login</a>
