--- a/templates/account.html
+++ b/templates/account.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="http://127.0.0.1:5000/index">Home</a>
+        <a href="http://127.0.0.1:5000/">Home</a>
         <a href="http://127.0.0.1:5000/find_recipe">Find a Recipe</a>
         <a href="http://127.0.0.1:5000/account">Account</a>
         <a href="http://127.0.0.1:5000/settings">Settings</a>
