--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="http://127.0.0.1:5000/index">Home</a>
+        <a href="http://127.0.0.1:5000/">Home</a>
         <!-- <a href="http://127.0.0.1:5000/find_recipe">Find Recipe</a> -->
         <a href="http://127.0.0.1:5000/login">Login</a>
         <a href="http://127.0.0.1:5000/signup">Signup</a>
