--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyaldem Recipe Generator</title>
-</head>
-<body>
+{% extends "/base.html" %}
+{% block title %}{{ recipe.title }}{% endblock %}
+{% include 'navbarActive.html' %}
+{% block main %}
     <h1>{{ recipe.title }}</h1>
     <img src="{{ recipe['image'] }}">
     <p>{{ recipe.summary|safe }}</p>
@@ -25,5 +21,4 @@
         <li>{{ step.step }}</li>
         {% endfor %}
     </ol>
-</body>
-</html>
+{% endblock %}
