--- a/templates/find_recipe.html
+++ b/templates/find_recipe.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyaldem Recipe Generator</title>
-</head>
-<body>
-    <h1>Enter Your Input: </h1>
-    <form action="http://127.0.0.1:5000/recipe_results" method="post">
-        <input type="text" name="user_input">
-        <button type="submit">Submit</button>
-    </form>
-</body>
-</html>
+{% extends "/base.html" %}
+{% block title %}Find Recipe{% endblock %}
+{% include 'navbarActive.html' %}
+{% block main %}
+    <div class="center">
+        <h1>Search Recipe</h1>
+        <form action="http://127.0.0.1:5000/recipe_results" method="post">
+            <input type="text" name="query">
+            <select name="cuisine">
+                <option value="" selected>Cuisine</option>
+                {% for cuisine in cuisines: %}
+                <option value= {{ cuisine }} >{{ cuisine }}</option>
+                {% endfor %}
+            </select>
+            <button type="submit">Search</button>
+        </form>
+    </div>
+{% endblock %}
