--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyaldem Recipe Generator</title>
-</head>
-<body>
-    <nav>
-        <a href="http://127.0.0.1:5000/">Overview</a>
-        <!-- <a href="http://127.0.0.1:5000/find_recipe">Find Recipe</a> -->
-        <a href="http://127.0.0.1:5000/faqs">FAQs</a>
-        <a href="http://127.0.0.1:5000/login">Login</a>
-        <a href="http://127.0.0.1:5000/signup">Signup</a>
-    </nav>
-<!-- 
-    <h1>Enter Your Input: </h1>
-    <form action="http://127.0.0.1:5000/find_recipe" method="post">
-        <input type="text" name="user_input">
-        <button type="submit">Submit</button>
-    </form> -->
+{% extends "/base.html" %}
+{% block title %}Home{% endblock %}
+{% include 'navbar.html' %}
+{% block main %}
     <h2>Overview</h2>
     <p>This will be the overview page explaining the application - find some pages to take inspiration from</p>
-
-</body>
-</html>
+    <p>This will be the overview page explaining the application - find some pages to take inspiration from</p>
+    <p>This will be the overview page explaining the application - find some pages to take inspiration from</p>
+{% endblock %}
