--- a/templates/recipe_results.html
+++ b/templates/recipe_results.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyaldem Recipe Generator</title>
-</head>
-<body>
+{% extends "/base.html" %}
+{% block title %}Results{% endblock %}
+{% include 'navbarActive.html' %}
+{% block main %}
     <h1>Results</h1>
     {% for result in results %}
     <a href="http://127.0.0.1:5000/recipe?id={{ result['id']  }}">
@@ -16,5 +12,4 @@
     </a>
     <hr>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
