--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Settings</title>
-</head>
-<body>
+{% extends "/base.html" %}
+{% block title %}Home{% endblock %}
+{% include 'navbarActive.html' %}
+{% block main %}
     <h2>Settings</h2>
     <p>This will need be filled with options like delete account and logout</p>
     <h3>Intolerances</h3>
@@ -48,5 +44,4 @@
         <br>
         <button type="submit">Save</button>
     </form>
-</body>
-</html>
+{% endblock %}
