--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
-    <nav>
-        <a href="http://127.0.0.1:5000/">Overview</a>
-        <!-- <a href="http://127.0.0.1:5000/find_recipe">Find Recipe</a> -->
-        <a href="http://127.0.0.1:5000/faqs">FAQs</a>
-        <a href="http://127.0.0.1:5000/login">Login</a>
-        <a href="http://127.0.0.1:5000/signup">Signup</a>
-    </nav>
+{% extends "/base.html" %}
+{% block title %}Home{% endblock %}
+{% include 'navbar.html' %}
+{% block main %}
     <h2>Signup</h2>
     {% if error %}
     <div class="alert alert-danger" role="alert">
@@ -38,5 +26,4 @@
     </form>
 
     <p>Already have an account? <a href="http://127.0.0.1:5000/login">Login here</a></p>
-</body>
-</html>
+{% endblock %}
