new api key & fixed default search

--- a/templates/navbarActive.html
+++ b/templates/navbarActive.html
@@ -1,6 +1,6 @@
 <nav id="navbar" class="card">   
     <a href="http://127.0.0.1:5000/dashboard">Home</a>
-    <a href="http://127.0.0.1:5000/search">Find a Recipe</a>
+    <a href="http://127.0.0.1:5000/search?query=&cuisine=">Find a Recipe</a>
     <a href="http://127.0.0.1:5000/account">Account</a>
     <a href="http://127.0.0.1:5000/settings">Settings</a>
     <a href="http://127.0.0.1:5000/logout">Logout</a>
