ok this might work

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav id="navbar" class="card">
-    <a href="{{ url_for('') }}">Overview</a>
+    <a href="{{ url_for('index') }}">Overview</a>
     <a href="{{ url_for('faq') }}">FAQs</a>
     <a href="{{ url_for('login') }}">Login</a>
     <a href="{{ url_for('signup') }}">Signup</a>
