--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav id="navbar" class="card">
     <a href="{{ url_for('index') }}">Overview</a>
-    <a href="{{ url_for('faq') }}">FAQs</a>
+    <a href="{{ url_for('faqs') }}">FAQs</a>
     <a href="{{ url_for('login') }}">Login</a>
     <a href="{{ url_for('signup') }}">Signup</a>
 </nav>
