replaced all implicit urls with url_for

--- a/templates/find_recipe.html
+++ b/templates/find_recipe.html
@@ -4,7 +4,7 @@
 {% block main %}
     <div class="center">
         <h1>Search Recipe</h1>
-        <form action="http://127.0.0.1:5000/recipe_results" method="post">
+        <form action="{{ url_for('recipe_results') }}" method="post">
             <input type="text" name="query">
             <select name="cuisine">
                 <option value="" selected>Cuisine</option>
