--- a/templates/search.html
+++ b/templates/search.html
@@ -4,19 +4,16 @@
 {% block main %}
     <div class="center">
         <h1>Search Recipe</h1>
-        <form action="http://127.0.0.1:5000/search" method="post">
-            <input type="text" name="query" value="{{ query }}">
-            <select name="cuisine">
-                <option value="{{ cuisine }}" selected>{{ cuisine }}</option>
-                {% for cuisine in cuisines: %}
-                <option value= {{ cuisine }} >{{ cuisine }}</option>
-                {% endfor %}
-            </select>
-            <button type="submit">Search</button>
+        <form action="{{ url_for('search') }}" method="post">
+            <input id="searchBar type="text" name="query" value="{{ query }}">
+            {% with title='Cuisine', items=cuisines %}
+                {% include "dropdownChecklist.html" %}
+            {% endwith %}
+            <!-- <button type="submit">Search</button> -->
         </form>
     </div>
     {% for result in results %}
-    <a href="http://127.0.0.1:5000/recipe?id={{ result['id']  }}">
+    <a href="{{ url_for('recipe?id={{ result['id'] }}') }}">
         <div>
             <h3>{{ result['title'] }}</h2>
             <img src="{{ result['image'] }}">
