--- a/templates/recipe_results.html
+++ b/templates/recipe_results.html
@@ -4,7 +4,7 @@
 {% block main %}
     <h1>Results</h1>
     {% for result in results %}
-    <a href="{{ url_for('recipe?id={{ result['id'] }}') }}">
+    <a href="{{ url_for('recipe', id={{ result['id'] }}') }}">
         <div>
             <h3>{{ result['title'] }}</h2>
             <img src="{{ result['image'] }}">
