--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
         </form>
     </div>
     {% for result in results %}
-    <a href="{{ url_for('recipe', id='{{ result['id'] }}') }}">
+    <a href="{{ url_for('recipe', id={{ result['id'] }}) }}">
         <div>
             <h3>{{ result['title'] }}</h2>
             <img src="{{ result['image'] }}">
