--- a/templates/search.html
+++ b/templates/search.html
@@ -14,6 +14,8 @@
     </div>
     {% for result in results %}
     <a href="{{ url_for('recipe', id={{ result['id'] }}) }}">
+    <!-- <a href="http://127.0.0.1:5000/recipe?id={{ result['id'] }}"> -->
+
         <div>
             <h3>{{ result['title'] }}</h2>
             <img src="{{ result['image'] }}">
