--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
         </form>
     </div>
     {% for result in results %}
-    <a href="{{ url_for('recipe', id={{ result['id'] }}) }}">
+    <a href="{{ url_for('recipe', id=result['id']) }}">
     <!-- <a href="http://127.0.0.1:5000/recipe?id={{ result['id'] }}"> -->
 
         <div>
