--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,8 +10,11 @@
     {% endif %}
 
     <form method="post" action="{{ url_for('signup') }}">
+        <label for="forename">Forename:</label>
+        <input type="text" id="forename" name="forename" required>
+        <br>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="forename" name="lastname" required>
         <br>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
