--- a/templates/settings.html
+++ b/templates/settings.html
@@ -2,46 +2,8 @@
 {% block title %}Home{% endblock %}
 {% include 'navbarActive.html' %}
 {% block main %}
-    <h2>Settings</h2>
-    <p>This will need be filled with options like delete account and logout</p>
-    <h3>Intolerances</h3>
-    <form method="post" action="{{ url_for('settings') }}">
-        <label for="dairy">Dairy</label>
-        <input type="checkbox" value="dairy" name="checkbox">
-        <br>
-        <label for="Egg">Egg</label>
-        <input type="checkbox" value="egg" name="checkbox">
-        <br>
-        <label for="gluten">Gluten</label>
-        <input type="checkbox" value="gluten" name="checkbox">
-        <br>
-        <label for="grain">Grain</label>
-        <input type="checkbox" value="grain" name="checkbox">
-        <br>
-        <label for="peanut">Peanut</label>
-        <input type="checkbox" value="peanut" name="checkbox">   
-        <br>
-        <label for="seafood">Seafood</label>
-        <input type="checkbox" value="seafood" name="checkbox">
-        <br>
-        <label for="sesame">Sesame</label>  
-        <input type="checkbox" value="sesame" name="checkbox">
-        <br>
-        <label for="shellfish">Shellfish</label>
-        <input type="checkbox" value="shellfish" name="checkbox">
-        <br>
-        <label for="soy">Soy</label>
-        <input type="checkbox" value="soy" name="checkbox">
-        <br>
-        <label for="sulfite">Sulfite</label>
-        <input type="checkbox" value="sulfite" name="checkbox">
-        <br>
-        <label for="treeNut">Tree Nut</label>
-        <input type="checkbox" value="treeNut" name="checkbox">
-        <br>
-        <label for="wheat">Wheat</label>
-        <input type="checkbox" value="wheat" name="checkbox">
-        <br>
-        <button type="submit">Save</button>
-    </form>
+    <h1>Settings</h1>
+    <div id="settingsPages">
+        <a href="{{ url_for('settings/intolerances') }}"></a>
+    </div>
 {% endblock %}
