--- a/templates/settings.html
+++ b/templates/settings.html
@@ -4,6 +4,6 @@
 {% block main %}
     <h1>Settings</h1>
     <div id="settingsPages">
-        <a href="{{ url_for('settings/intolerances') }}"></a>
+        <a href="{{ url_for('settingsIntolerances') }}"></a>
     </div>
 {% endblock %}
