--- a/templates/intolerances.html
+++ b/templates/intolerances.html
@@ -1,5 +1,5 @@
 <h3>Intolerances</h3>
-<form method="post" action="{{ url_for('settings/intolerances') }}">
+<form method="post" action="{{ url_for('settingsIntolerances') }}">
     <label for="dairy">Dairy</label>
     <input type="checkbox" value="dairy" name="checkbox">
     <br>
