--- a/templates/navbarActive.html
+++ b/templates/navbarActive.html
@@ -2,6 +2,6 @@
     <a href="{{ url_for('dashboard') }}">Home</a>
     <a href="{{ url_for('search', query='', cuisine='') }}">Find a Recipe</a>
     <a href="{{ url_for('account') }}">Account</a>
-    <a href="{{ url_for('settings') }}">Settings</a>
+    <a href="{{ url_for('settingsIntolerances') }}">Settings</a>
     <a href="{{ url_for('logout') }}">Logout</a>
 </nav>
