added diets setting

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -5,6 +5,7 @@
     <h1>Settings</h1>
     <div id="settingsPages">
         <a href="{{ url_for('settingsIntolerances') }}">Intolerances</a>
+        <a href="{{ url_for('settingsDiets') }}">Intolerances</a>
     </div>
     <div id="options">
         {% block options %}{% endblock %}
