fixed reset password link in settings.html

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,7 +6,7 @@
     <div id="settingsPages">
         <a href="{{ url_for('settingsIntolerances') }}">Intolerances</a>
         <a href="{{ url_for('settingsDiets') }}">Intolerances</a>
-        <a href="{{ url_for('settingsResetPass') }}">Reset Password</a>
+        <a href="{{ url_for('settingsResetPassword') }}">Reset Password</a>
     </div>
     <div id="options">
         {% block options %}{% endblock %}
