fixed settings diet link name

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -5,7 +5,7 @@
     <h1>Settings</h1>
     <div id="settingsPages">
         <a href="{{ url_for('settingsIntolerances') }}">Intolerances</a>
-        <a href="{{ url_for('settingsDiets') }}">Intolerances</a>
+        <a href="{{ url_for('settingsDiets') }}">Diets</a>
         <a href="{{ url_for('settingsResetPassword') }}">Reset Password</a>
     </div>
     <div id="options">
