--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -98,6 +98,8 @@ nav a:hover{
 .alert {
     background-color: rgb(246, 241, 205);
     border: 1px solid rgb(119, 93, 45);
+    border-radius: 10px;
     color: rgb(119, 93, 45);
     padding: 20px;
+    margin: 10px
 }
