fixed meal types

--- a/templates/dropdownChecklist.html
+++ b/templates/dropdownChecklist.html
@@ -1,4 +1,4 @@
-<div id="list1" class="dropdown" tabindex="100">
+<div class="dropdown" tabindex="100">
     <span class="anchor">{{ title }}</span>
     <ul class="items">
         {% for item in items %}
