--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,8 +8,8 @@
         <label for="forename">Forename:</label>
         <input type="text" id="forename" name="forename" required>
         <br>
-        <label for="username">Username:</label>
-        <input type="text" id="forename" name="lastname" required>
+        <label for="lastname">Lastname:</label>
+        <input type="text" id="lastname" name="lastname" required>
         <br>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
