--- a/templates/search.html
+++ b/templates/search.html
@@ -20,7 +20,7 @@
         <div class="card">
             <h3>{{ result['title'] }}</h2>
             <img src="{{ result['image'] }}">
-            <a href="{{ url_for('saveRecipe', id=recipe.id) }}">Save Recipe</a>
+            <a href="{{ url_for('saveRecipe', id=result['id']) }}">Save Recipe</a>
         </div>
     </a>
     <hr>
