updated recipe result styling

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -12,12 +12,15 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     outline: 1px solid rgb(213, 213, 213);
     border-radius: 10px;
-    padding: 10px;
 }
 .center{
     text-align: center;
     margin: auto;
     width: 80%;
+}
+.recipeResult{
+    padding: 10px;
+    margin-bottom: 5px;
 }
 nav{
     list-style-type: none;
